--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -4,6 +4,7 @@
     "com.unity.ai.generators": "1.0.0-pre.20",
     "com.unity.ai.inference": "2.4.1",
     "com.unity.ai.navigation": "2.0.9",
+    "com.unity.animation.rigging": "1.4.0",
     "com.unity.burst": "1.8.26",
     "com.unity.cinemachine": "2.10.5",
     "com.unity.collab-proxy": "2.11.2",
